Last updates of the files in the server

--- a/LAB/DEEP_LEARNING/Dataset_Generator/NOTEBOOK_D_Matrix_Grid_Simulator_WORKER_3.ipynb
+++ b/LAB/DEEP_LEARNING/Dataset_Generator/NOTEBOOK_D_Matrix_Grid_Simulator_WORKER_3.ipynb
@@ -1,13 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Generate the Basic Grid for $w_0,R_0,Z$"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -35,24 +28,24 @@
    "source": [
     "# Set the PARAMETERS ############################################\n",
     "##################################################################\n",
-    "experiment_name=\"Basler_like_R0_300x_w0_300x_Z_50x_64bit\"\n",
-    "N_R0 = 70 #130\n",
-    "N_w0 = 70 #130\n",
-    "N_Z = 4 #8\n",
+    "experiment_name=\"Basler_like_Proof_of_Concept\"\n",
+    "N_R0 = 115 #70\n",
+    "N_w0 = 115 #70\n",
+    "N_Z = 1 #4\n",
     "\n",
     "output_directory=f\"/home/oiangu/Hippocampus/Conical_Refraction_Polarimeter/OUTPUT/LIBRARIES_OF_THEORETICAL_D/{experiment_name}/\"\n",
     "#output_directory=f\"./OUTPUT/LIBRARIES_OF_THEORETICAL_D/{experiment_name}/\"\n",
     "#os.chdir(f\"/home/oiangu/Desktop/Conical_Refraction_Polarimeter/\")\n",
     "\n",
     "randomization_seed=666\n",
-    "image_shortest_side=540\n",
+    "image_shortest_side=191\n",
     "saturation=1\n",
     "\n",
     "# Ring parameters to test (each will be a different simulation)\n",
     "#phiCR_s=np.linspace(-180,180,360*10**significant_decimal+1)*np.pi/180\n",
-    "R0_s=np.linspace(70, 180, N_R0) #np.linspace(70,180,40) # in pxels 153\n",
-    "w0_s=np.linspace( 8, 40, N_w0) #np.linspace(8,50,40) 11\n",
-    "Z_s=np.linspace(0, 0.9, N_Z)\n",
+    "R0_s= np.linspace(40, 52, N_R0)#np.linspace(110, 180, N_R0) #np.linspace(70,180,40) # in pxels 153\n",
+    "w0_s= np.linspace(2, 9, N_w0)#np.linspace( 8, 35, N_w0) #np.linspace(8,50,40) 11\n",
+    "Z_s=np.linspace(0, 0.05, N_Z)\n",
     "rho_0s=R0_s/w0_s\n",
     "\n",
     "\n",
@@ -83,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -108,12 +101,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "TOTAL_WORKERS = 2\n",
-    "WORKER_ID = 0 # beginning from 0 till TOTAL_WORKERS-1\n",
+    "TOTAL_WORKERS = 4\n",
+    "WORKER_ID = 3 # beginning from 0 till TOTAL_WORKERS-1\n",
     "\n",
     "def beg_index(N,j,K):\n",
     "    # N -> number of total elements in vector, j is worker id, K is total number of workers\n",
@@ -137,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -148,11 +141,11 @@
      "text": [
       "[####################################################################################################] 100.0% \n",
       "\n",
-      "Simulated: 9801/9800\n",
-      "Elapsed time: 10.0 h 44.0 min -547.4 s\n",
+      "Simulated: 3221/3220\n",
+      "Elapsed time: 2.0 h 25.0 min -112.3 s\n",
       "\n",
       "\n",
-      "WORKER 0 FINISHED!!!\n"
+      "WORKER 3 FINISHED!!!\n"
      ]
     }
    ],
@@ -234,9 +227,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Not a file or file object (not a file or file object)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [6]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mh5f\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mflush\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      2\u001b[0m h5f\u001b[38;5;241m.\u001b[39mclose()\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.8/site-packages/h5py/_hl/files.py:561\u001b[0m, in \u001b[0;36mFile.flush\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    558\u001b[0m \u001b[38;5;124;03m\"\"\" Tell the HDF5 library to flush its buffers.\u001b[39;00m\n\u001b[1;32m    559\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    560\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m phil:\n\u001b[0;32m--> 561\u001b[0m     \u001b[43mh5f\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mflush\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mid\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32mh5py/_objects.pyx:54\u001b[0m, in \u001b[0;36mh5py._objects.with_phil.wrapper\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mh5py/_objects.pyx:55\u001b[0m, in \u001b[0;36mh5py._objects.with_phil.wrapper\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mh5py/h5f.pyx:164\u001b[0m, in \u001b[0;36mh5py.h5f.flush\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: Not a file or file object (not a file or file object)"
+     ]
+    }
+   ],
    "source": [
     "h5f.flush()\n",
     "h5f.close()"
@@ -251,20 +260,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Worker 0 done!\n",
-      "Worker 1 done!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#raise ValueError\n",
+    "raise ValueError\n",
     "# Open the big h5f that will contain all of the parts\n",
     "h5f = h5py.File(f\"{image_directory}/Dataset_R0_{N_R0}_w0_{N_w0}_Z_{N_Z}.h5\", 'w') # append if exists, create if not\n",
     "total_phase = {'R0s':[], 'w0s':[], 'Zs':[], 'IDs':[]}\n",
@@ -284,6 +284,13 @@
     "json.dump(total_phase, open( f\"{output_directory}/STRUCTURE_Grid_R0_{N_R0}_w0_{N_w0}_Z_{N_Z}.json\", \"w\"))\n",
     "h5f.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -604,8 +611,8 @@
     "import h5py\n",
     "from IPython import display\n",
     "\n",
-    "output_directory=\"/home/oiangu/Hippocampus/Conical_Refraction_Polarimeter/OUTPUT/LIBRARIES_OF_THEORETICAL_D/Basler_like_R0_300x_w0_300x_Z_50x_64bit/IMAGE_LIBRARY/NOISY/TEST/\"\n",
-    "#output_directory=\"/home/oiangu/Hippocampus/Conical_Refraction_Polarimeter/OUTPUT/LIBRARIES_OF_THEORETICAL_D/Basler_like_R0_300x_w0_300x_Z_50x_64bit/IMAGE_LIBRARY/NON_NOISY/TRAIN/\"\n",
+    "#output_directory=\"/home/oiangu/Hippocampus/Conical_Refraction_Polarimeter/OUTPUT/LIBRARIES_OF_THEORETICAL_D/Basler_like_R0_300x_w0_300x_Z_50x_64bit/IMAGE_LIBRARY/NOISY/TRAIN/\"\n",
+    "output_directory=\"/home/oiangu/Hippocampus/Conical_Refraction_Polarimeter/OUTPUT/LIBRARIES_OF_THEORETICAL_D/Basler_like_R0_300x_w0_300x_Z_50x_64bit/IMAGE_LIBRARY/NON_NOISY/TRAIN/\"\n",
     "\n",
     "os.makedirs(output_directory, exist_ok=True)"
    ]
@@ -620,7 +627,7 @@
     "D_matrix_file_path= \"/home/oiangu/Hippocampus/Conical_Refraction_Polarimeter/OUTPUT/LIBRARIES_OF_THEORETICAL_D/Basler_like_R0_300x_w0_300x_Z_50x_64bit/SIMULATIONS/Encoder_Alone/Dataset_R0_70_w0_70_Z_4.h5\"\n",
     "        \n",
     "\n",
-    "total_images_to_generate = 100000 # para el test set unos 100000 bien supongo\n",
+    "total_images_to_generate = 500000 # para el test set unos 100000 bien supongo\n",
     "\n",
     "batch_size = 10\n",
     "number_of_batches_per_epoch = int(total_images_to_generate/batch_size)\n",
@@ -629,9 +636,9 @@
     "\n",
     "X=302\n",
     "generate_images_w_depth=8\n",
-    "random_seed=669 # 669 aldatu seede para generar los validation set!!!\n",
+    "random_seed=666 # 669 aldatu seede para generar los validation set!!!\n",
     "\n",
-    "apply_noise=True # Genera otro dataset pair sin noise tb\n",
+    "apply_noise=False # Genera otro dataset pair sin noise tb\n",
     "all_stregths_random_per_epoch=True\n",
     "max_poisson_strength=0.5\n",
     "max_blob_strength=0.5\n",
@@ -695,9 +702,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processed 100000/100000 images 100.0 %\n",
-      "CPU times: user 51min 51s, sys: 1min 21s, total: 53min 12s\n",
-      "Wall time: 16min 43s\n"
+      "Processed 500000/500000 images 100.0 %\n",
+      "CPU times: user 24min 23s, sys: 1min 18s, total: 25min 42s\n",
+      "Wall time: 52min 51s\n"
      ]
     }
    ],
@@ -750,11 +757,25 @@
    "source": []
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": [
-    "# Tests"
-   ]
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
