--- a/LAB/DEEP_LEARNING/Dataset_Generator/NOTEBOOK_D_Matrix_Grid_Simulator_WORKER_1.ipynb
+++ b/LAB/DEEP_LEARNING/Dataset_Generator/NOTEBOOK_D_Matrix_Grid_Simulator_WORKER_1.ipynb
@@ -28,25 +28,26 @@
    "source": [
     "# Set the PARAMETERS ############################################\n",
     "##################################################################\n",
-    "experiment_name=\"Basler_like_R0_115x_w0_115x_Z_3x_64bit\"\n",
+    "experiment_name=\"Basler_like_Proof_of_Concept\"\n",
     "N_R0 = 115 #70\n",
     "N_w0 = 115 #70\n",
-    "N_Z = 3 #4\n",
+    "N_Z = 1 #4\n",
     "\n",
     "output_directory=f\"/home/oiangu/Hippocampus/Conical_Refraction_Polarimeter/OUTPUT/LIBRARIES_OF_THEORETICAL_D/{experiment_name}/\"\n",
     "#output_directory=f\"./OUTPUT/LIBRARIES_OF_THEORETICAL_D/{experiment_name}/\"\n",
     "#os.chdir(f\"/home/oiangu/Desktop/Conical_Refraction_Polarimeter/\")\n",
     "\n",
     "randomization_seed=666\n",
-    "image_shortest_side=541\n",
+    "image_shortest_side=191\n",
     "saturation=1\n",
     "\n",
     "# Ring parameters to test (each will be a different simulation)\n",
     "#phiCR_s=np.linspace(-180,180,360*10**significant_decimal+1)*np.pi/180\n",
-    "R0_s=np.linspace(110, 180, N_R0) #np.linspace(70,180,40) # in pxels 153\n",
-    "w0_s=np.linspace( 8, 35, N_w0) #np.linspace(8,50,40) 11\n",
+    "R0_s= np.linspace(40, 52, N_R0)#np.linspace(110, 180, N_R0) #np.linspace(70,180,40) # in pxels 153\n",
+    "w0_s= np.linspace(2, 9, N_w0)#np.linspace( 8, 35, N_w0) #np.linspace(8,50,40) 11\n",
     "Z_s=np.linspace(0, 0.05, N_Z)\n",
     "rho_0s=R0_s/w0_s\n",
+    "\n",
     "\n",
     "resolution_side_nx=image_shortest_side # generated images will be resolution_side x resolution_side\n",
     "# Other parameters\n",
@@ -104,7 +105,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "TOTAL_WORKERS = 2\n",
+    "TOTAL_WORKERS = 4\n",
     "WORKER_ID = 1 # beginning from 0 till TOTAL_WORKERS-1\n",
     "\n",
     "def beg_index(N,j,K):\n",
@@ -140,8 +141,8 @@
      "text": [
       "[####################################################################################################] 100.0% \n",
       "\n",
-      "Simulated: 19666/19665\n",
-      "Elapsed time: 75.0 h 12.0 min -4.477e+03 s\n",
+      "Simulated: 3336/3335\n",
+      "Elapsed time: 2.0 h 30.0 min -112.0 s\n",
       "\n",
       "\n",
       "WORKER 1 FINISHED!!!\n"
@@ -226,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +237,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [8]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mh5f\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mflush\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      2\u001b[0m h5f\u001b[38;5;241m.\u001b[39mclose()\n",
+      "Input \u001b[0;32mIn [6]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mh5f\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mflush\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      2\u001b[0m h5f\u001b[38;5;241m.\u001b[39mclose()\n",
       "File \u001b[0;32m~/anaconda3/lib/python3.8/site-packages/h5py/_hl/files.py:561\u001b[0m, in \u001b[0;36mFile.flush\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    558\u001b[0m \u001b[38;5;124;03m\"\"\" Tell the HDF5 library to flush its buffers.\u001b[39;00m\n\u001b[1;32m    559\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    560\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m phil:\n\u001b[0;32m--> 561\u001b[0m     \u001b[43mh5f\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mflush\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mid\u001b[49m\u001b[43m)\u001b[49m\n",
       "File \u001b[0;32mh5py/_objects.pyx:54\u001b[0m, in \u001b[0;36mh5py._objects.with_phil.wrapper\u001b[0;34m()\u001b[0m\n",
       "File \u001b[0;32mh5py/_objects.pyx:55\u001b[0m, in \u001b[0;36mh5py._objects.with_phil.wrapper\u001b[0;34m()\u001b[0m\n",
