--- a/REPORT/Conical_Refraction_Polarimeter_REDUCED_ed.tex
+++ b/REPORT/Conical_Refraction_Polarimeter_REDUCED_ed.tex
@@ -79,7 +79,7 @@
 \makeindex[columns=3, title=Alphabetical Index, intoc]
 
 %\title{\vspace{-2.5cm} {\bf Can we make the Exponential scaling in Time\\ be Linear in Time if Parallelized Exponentially? \\ {\em - Part 2 -}} \vspace{-0.4cm}  }
-\title{\vspace{-2cm} {\bf Crafting a \\Conical Refraction Polarimeter\\ $-$ REDUCED VERSION $-$}\\{\small by {\em Xabier Oyanguren Asua}}\vspace{-0.8cm}}
+\title{\vspace{-2cm} {\bf Crafting a \\Conical Refraction Polarimeter\\ $-$ REDUCED VERSION $-$}\\{\small by {\em Xabier Oianguren Asua}}\vspace{-0.8cm}}
 \date{\vspace{-11ex}}
 \let\clipbox\relax
 \usepackage{adjustbox}
@@ -220,7 +220,7 @@ TOWARDS A LOW-COST\vspace{0.2cm}\\  DEVICE TO MONITOR\vspace{0.2cm}\\ LINEAR POL
 
 \nbvspace[8]
 \small BY\\
-\Large Xabier Oyanguren Asua\\[0.5em]
+\Large Xabier Oianguren Asua\\[0.5em]
 %\footnotesize Can we really foresee the future of the Universe?"\\
 
 \nbvspace[1]
