--- a/REPORT/Conical_Refraction_Polarimeter_READ_ed.tex
+++ b/REPORT/Conical_Refraction_Polarimeter_READ_ed.tex
@@ -1897,7 +1897,7 @@ All the carried tests and their results, gathered algorithm-wise and image-wise 
 \caption{Summary of the best variant found for each algorithm on 1000 random samples of the {\bf Non-Noisy} Image Dataset. CI stands for the bootstrap-t confidence intervals for the expectation. Ordered by increasing mean absolute.}\label{tab:nonnoisy}
 \hspace{-0.6cm}\begin{tabular}{c|c|c|cc|cc}
 \toprule
-\multicolumn{2}{c|}{\bf Algorithm} &  \multicolumn{3}{|c|}{\bf Absolute Error (rad)} & \multicolumn{2}{|c}{\bf Times (s)} \\ \midrule \midrule
+\multicolumn{2}{c|}{\bf Algorithm} &  \multicolumn{3}{|c|}{\bf Absolute Error (deg)} & \multicolumn{2}{|c}{\bf Times (s)} \\ \midrule \midrule
 {\bf                     Name} &                          {\bf Winner} {\bf Variant} &  {\bf Mean} &  \multicolumn{2}{c|}{\bf 90\% CI } &  \multicolumn{2}{|c}{\bf 90\% CI }\\
 \bottomrule\rule{0pt}{4mm}{}
            Mirror Flip & Quadratic Opt., Lanczos Interpol.,  & 0.00106 &    0.00102 &   0.00109 &        0.218 &       0.220 \\
@@ -1939,7 +1939,7 @@ Some additional points must be noted on the results. On the one hand, we see tha
 
 \hspace{-0.6cm}\begin{tabular}{c|c|c|cc|cc}
 \toprule
- \multicolumn{2}{c|}{\bf Algorithm} &  \multicolumn{3}{|c|}{\bf Absolute Error (rad)} & \multicolumn{2}{|c}{\bf Times (s)} \\ \midrule \midrule
+ \multicolumn{2}{c|}{\bf Algorithm} &  \multicolumn{3}{|c|}{\bf Absolute Error (deg)} & \multicolumn{2}{|c}{\bf Times (s)} \\ \midrule \midrule
 {\bf                     Name} &                          {\bf Winner} {\bf Variant} &  {\bf Mean} &  \multicolumn{2}{c|}{\bf 90\% CI } &  \multicolumn{2}{|c}{\bf 90\% CI }\\
 \bottomrule\rule{0pt}{4mm}{}
            Simulation Fit &         Opt. Powell, About Gravicenter, &  1.86 &       1.75 &      1.98 &         1.24 &        1.25 \\
@@ -2145,7 +2145,7 @@ Running the same pipeline of (B.10.1) on the experimental datasets, we get the r
 \caption{Sumary of the best variant found for each algorithm on the HeNe laser dataset. Confidence intervals are not shown, since with only 7 samples, they are not significant enough. Std stands for standard deviation. }\label{tab:resExp}
 \hspace{-0.1cm}\begin{tabular}{c|c|cc|cc}
 \toprule
- \multicolumn{2}{c|}{\bf Algorithm} &  \multicolumn{2}{|c|}{\bf \small Abs. Error (rad)} & \multicolumn{2}{|c}{\bf Times (s)} \\ \midrule \midrule
+ \multicolumn{2}{c|}{\bf Algorithm} &  \multicolumn{2}{|c|}{\bf \small Abs. Error (deg)} & \multicolumn{2}{|c}{\bf Times (s)} \\ \midrule \midrule
 {\bf                     Name} &                          {\bf Winner} {\bf Variant} &  {\bf Mean} &  {\bf Std.} & {\bf Mean} & {\bf Std.}\\
 \bottomrule\rule{0pt}{4mm}{}
     Cosine squared fit &  {\small  Opt. Nelder-Mead, final estimation } &  0.50(5) &  0.29 &  2.88 &  0.012 \\
