--- a/REPORT/Conical_Refraction_Polarimeter_READ_ed.tex
+++ b/REPORT/Conical_Refraction_Polarimeter_READ_ed.tex
@@ -248,16 +248,16 @@ Bachelor's Thesis \\ \small Computational Mathematics and Data Analytics \\
 \nbvspace[0.5]
 \end{center}
 \newpage
-\null
-\clearpage
-\newpage
+%\null
+%\clearpage
+%\newpage
 \begin{dedication}
 Para Todor,\\ me debes una caña :)
 \end{dedication}
 \newpage
-\null
-\clearpage
-\newpage
+%\null
+%\clearpage
+%\newpage
 \clearpage
 \maketitle
 \vspace{-0.3cm}
@@ -269,9 +269,9 @@ Para Todor,\\ me debes una caña :)
 \tableofcontents
 \clearpage
 \newpage
-\null
-\clearpage
-\newpage
+%\null
+%\clearpage
+%\newpage
 \pagenumbering{arabic}
 \setcounter{page}{1}
 \vspace{-0.3 cm}
@@ -313,9 +313,9 @@ Finally, in Part C, we briefly review the experimental CR phenomenon and infer t
 %\null
 %\clearpage
 \newpage
-\null
-\clearpage
-\newpage
+%\null
+%\clearpage
+%\newpage
 
 \section*{\centering \huge{Part A: The Essence of the Polarimeter}\vspace{-0.4cm}}
 \noindent\rule{\textwidth}{0.4pt}
