--- a/LAB/DEEP_LEARNING/Dataset_Generator/NOTEBOOK_D_Matrix_Grid_Simulator_WORKER_0.ipynb
+++ b/LAB/DEEP_LEARNING/Dataset_Generator/NOTEBOOK_D_Matrix_Grid_Simulator_WORKER_0.ipynb
@@ -10,14 +10,14 @@
       "text/html": [
        "\n",
        "        <script>\n",
-       "            function code_toggle_15316292028626241262() {\n",
+       "            function code_toggle_11320687227353328932() {\n",
        "                $('div.cell.code_cell.rendered.selected').find('div.input').toggle();\n",
        "            }\n",
        "\n",
        "            \n",
        "        </script>\n",
        "\n",
-       "        <a href=\"javascript:code_toggle_15316292028626241262()\">Toggle show/hide</a>\n",
+       "        <a href=\"javascript:code_toggle_11320687227353328932()\">Toggle show/hide</a>\n",
        "    "
       ],
       "text/plain": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,31 +102,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Set the PARAMETERS ############################################\n",
     "##################################################################\n",
-    "experiment_name=\"Basler_like_Proof_of_Concept\"\n",
-    "N_R0 = 115 #70\n",
-    "N_w0 = 115 #70\n",
-    "N_Z = 1 #4\n",
+    "experiment_name=\"DATASET_Basler_like_with_magnification\"\n",
+    "N_R0 = 20 #70\n",
+    "N_w0 = 10 #70\n",
+    "N_Z = 2 #4\n",
     "\n",
-    "output_directory=f\"/home/oiangu/Hippocampus/Conical_Refraction_Polarimeter/OUTPUT/LIBRARIES_OF_THEORETICAL_D/{experiment_name}/\"\n",
-    "#output_directory=f\"./OUTPUT/LIBRARIES_OF_THEORETICAL_D/{experiment_name}/\"\n",
+    "#output_directory = \"/media/melanie/D459-5113/CONICAL_REFRACTION_DATABASE\"\n",
+    "#output_directory=f\"/home/oiangu/Hippocampus/Conical_Refraction_Polarimeter/OUTPUT/LIBRARIES_OF_THEORETICAL_D/{experiment_name}/\"\n",
+    "output_directory=f\"./OUTPUT/{experiment_name}/\"\n",
     "#os.chdir(f\"/home/oiangu/Desktop/Conical_Refraction_Polarimeter/\")\n",
     "\n",
     "randomization_seed=666\n",
-    "image_shortest_side=191\n",
+    "image_shortest_side=521 # Should be ODD!!!\n",
     "saturation=1\n",
     "\n",
     "# Ring parameters to test (each will be a different simulation)\n",
     "#phiCR_s=np.linspace(-180,180,360*10**significant_decimal+1)*np.pi/180\n",
-    "R0_s= np.linspace(40, 52, N_R0)#np.linspace(110, 180, N_R0) #np.linspace(70,180,40) # in pxels 153\n",
-    "w0_s= np.linspace(2, 9, N_w0)#np.linspace( 8, 35, N_w0) #np.linspace(8,50,40) 11\n",
+    "R0_s= np.linspace(100, 180, N_R0)#np.linspace(110, 180, N_R0) #np.linspace(70,180,40) # in pxels 153\n",
+    "w0_s= np.linspace(8, 40, N_w0)#np.linspace( 8, 35, N_w0) #np.linspace(8,50,40) 11\n",
     "Z_s=np.linspace(0, 0.05, N_Z)\n",
-    "rho_0s=R0_s/w0_s\n",
+    "#rho_0s=R0_s/w0_s\n",
     "\n",
     "\n",
     "resolution_side_nx=image_shortest_side # generated images will be resolution_side x resolution_side\n",
@@ -156,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -181,11 +182,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "TOTAL_WORKERS = 4\n",
+    "TOTAL_WORKERS = 2\n",
     "WORKER_ID = 0 # beginning from 0 till TOTAL_WORKERS-1\n",
     "\n",
     "def beg_index(N,j,K):\n",
@@ -210,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -219,13 +220,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[####################################################################################################] 100.0% \n",
+      "[####################################################################################################] 100.5% \n",
       "\n",
-      "Simulated: 3336/3335\n",
-      "Elapsed time: 2.0 h 30.0 min -111.9 s\n",
+      "Simulated: 201/200\n",
+      "Elapsed time: 1.0 h 52.0 min -56.45 s\n",
       "\n",
       "\n",
-      "WORKER 0 FINISHED!!!\n"
+      "WORKER 1 FINISHED!!!\n"
      ]
     }
    ],
@@ -307,22 +308,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "Not a file or file object (not a file or file object)",
+     "ename": "RuntimeError",
+     "evalue": "Unable to synchronously flush file (not a file or file object)",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [7]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mh5f\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mflush\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      2\u001b[0m h5f\u001b[38;5;241m.\u001b[39mclose()\n",
-      "File \u001b[0;32m~/anaconda3/lib/python3.8/site-packages/h5py/_hl/files.py:561\u001b[0m, in \u001b[0;36mFile.flush\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    558\u001b[0m \u001b[38;5;124;03m\"\"\" Tell the HDF5 library to flush its buffers.\u001b[39;00m\n\u001b[1;32m    559\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    560\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m phil:\n\u001b[0;32m--> 561\u001b[0m     \u001b[43mh5f\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mflush\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mid\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mh5f\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mflush\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      2\u001b[0m h5f\u001b[38;5;241m.\u001b[39mclose()\n",
+      "File \u001b[0;32m~/miniconda3/lib/python3.10/site-packages/h5py/_hl/files.py:590\u001b[0m, in \u001b[0;36mFile.flush\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    587\u001b[0m \u001b[38;5;124;03m\"\"\" Tell the HDF5 library to flush its buffers.\u001b[39;00m\n\u001b[1;32m    588\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    589\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m phil:\n\u001b[0;32m--> 590\u001b[0m     \u001b[43mh5f\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mflush\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mid\u001b[49m\u001b[43m)\u001b[49m\n",
       "File \u001b[0;32mh5py/_objects.pyx:54\u001b[0m, in \u001b[0;36mh5py._objects.with_phil.wrapper\u001b[0;34m()\u001b[0m\n",
       "File \u001b[0;32mh5py/_objects.pyx:55\u001b[0m, in \u001b[0;36mh5py._objects.with_phil.wrapper\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mh5py/h5f.pyx:164\u001b[0m, in \u001b[0;36mh5py.h5f.flush\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: Not a file or file object (not a file or file object)"
+      "File \u001b[0;32mh5py/h5f.pyx:159\u001b[0m, in \u001b[0;36mh5py.h5f.flush\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: Unable to synchronously flush file (not a file or file object)"
      ]
     }
    ],
@@ -340,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -348,9 +349,7 @@
      "output_type": "stream",
      "text": [
       "Worker 0 done!\n",
-      "Worker 1 done!\n",
-      "Worker 2 done!\n",
-      "Worker 3 done!\n"
+      "Worker 1 done!\n"
      ]
     }
    ],
@@ -410,11 +409,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cuda:0\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import pandas as pd\n",
@@ -697,9 +704,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "PermissionError",
+     "evalue": "[Errno 13] Permission denied: '/home/oiangu'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mPermissionError\u001b[0m                           Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 10\u001b[0m\n\u001b[1;32m      7\u001b[0m output_directory\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m/home/oiangu/Hippocampus/Conical_Refraction_Polarimeter/OUTPUT/LIBRARIES_OF_THEORETICAL_D/Basler_like_R0_300x_w0_300x_Z_50x_64bit/IMAGE_LIBRARY/NOISY/TRAIN/\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;66;03m#output_directory=\"/home/oiangu/Hippocampus/Conical_Refraction_Polarimeter/OUTPUT/LIBRARIES_OF_THEORETICAL_D/Basler_like_R0_300x_w0_300x_Z_50x_64bit/IMAGE_LIBRARY/NON_NOISY/TRAIN/\"\u001b[39;00m\n\u001b[0;32m---> 10\u001b[0m \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmakedirs\u001b[49m\u001b[43m(\u001b[49m\u001b[43moutput_directory\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mexist_ok\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/miniconda3/lib/python3.10/os.py:215\u001b[0m, in \u001b[0;36mmakedirs\u001b[0;34m(name, mode, exist_ok)\u001b[0m\n\u001b[1;32m    213\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m head \u001b[38;5;129;01mand\u001b[39;00m tail \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m path\u001b[38;5;241m.\u001b[39mexists(head):\n\u001b[1;32m    214\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m--> 215\u001b[0m         \u001b[43mmakedirs\u001b[49m\u001b[43m(\u001b[49m\u001b[43mhead\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mexist_ok\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mexist_ok\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    216\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mFileExistsError\u001b[39;00m:\n\u001b[1;32m    217\u001b[0m         \u001b[38;5;66;03m# Defeats race condition when another thread created the path\u001b[39;00m\n\u001b[1;32m    218\u001b[0m         \u001b[38;5;28;01mpass\u001b[39;00m\n",
+      "File \u001b[0;32m~/miniconda3/lib/python3.10/os.py:215\u001b[0m, in \u001b[0;36mmakedirs\u001b[0;34m(name, mode, exist_ok)\u001b[0m\n\u001b[1;32m    213\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m head \u001b[38;5;129;01mand\u001b[39;00m tail \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m path\u001b[38;5;241m.\u001b[39mexists(head):\n\u001b[1;32m    214\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m--> 215\u001b[0m         \u001b[43mmakedirs\u001b[49m\u001b[43m(\u001b[49m\u001b[43mhead\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mexist_ok\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mexist_ok\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    216\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mFileExistsError\u001b[39;00m:\n\u001b[1;32m    217\u001b[0m         \u001b[38;5;66;03m# Defeats race condition when another thread created the path\u001b[39;00m\n\u001b[1;32m    218\u001b[0m         \u001b[38;5;28;01mpass\u001b[39;00m\n",
+      "    \u001b[0;31m[... skipping similar frames: makedirs at line 215 (5 times)]\u001b[0m\n",
+      "File \u001b[0;32m~/miniconda3/lib/python3.10/os.py:215\u001b[0m, in \u001b[0;36mmakedirs\u001b[0;34m(name, mode, exist_ok)\u001b[0m\n\u001b[1;32m    213\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m head \u001b[38;5;129;01mand\u001b[39;00m tail \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m path\u001b[38;5;241m.\u001b[39mexists(head):\n\u001b[1;32m    214\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m--> 215\u001b[0m         \u001b[43mmakedirs\u001b[49m\u001b[43m(\u001b[49m\u001b[43mhead\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mexist_ok\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mexist_ok\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    216\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mFileExistsError\u001b[39;00m:\n\u001b[1;32m    217\u001b[0m         \u001b[38;5;66;03m# Defeats race condition when another thread created the path\u001b[39;00m\n\u001b[1;32m    218\u001b[0m         \u001b[38;5;28;01mpass\u001b[39;00m\n",
+      "File \u001b[0;32m~/miniconda3/lib/python3.10/os.py:225\u001b[0m, in \u001b[0;36mmakedirs\u001b[0;34m(name, mode, exist_ok)\u001b[0m\n\u001b[1;32m    223\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m\n\u001b[1;32m    224\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m--> 225\u001b[0m     \u001b[43mmkdir\u001b[49m\u001b[43m(\u001b[49m\u001b[43mname\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmode\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    226\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mOSError\u001b[39;00m:\n\u001b[1;32m    227\u001b[0m     \u001b[38;5;66;03m# Cannot rely on checking for EEXIST, since the operating system\u001b[39;00m\n\u001b[1;32m    228\u001b[0m     \u001b[38;5;66;03m# could give priority to other errors like EACCES or EROFS\u001b[39;00m\n\u001b[1;32m    229\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m exist_ok \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m path\u001b[38;5;241m.\u001b[39misdir(name):\n",
+      "\u001b[0;31mPermissionError\u001b[0m: [Errno 13] Permission denied: '/home/oiangu'"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import cv2\n",
@@ -2150,7 +2174,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
